# machine-vision-class

./: .gitignore
camera-decomposition/: main.ipynb
lab-5/py/: calibrate.yaml  calibrate_robot.yaml  main.py  undistort.py
lab-6/: calibrate_robot.yaml
lab-6/cpp/: main.cpp
lab-6/py/: draw_epilines.py  lab_exercise.py  main.py  stats.py  stats.test.py  tracker.py  utils.py
lab-7/: CMakeLists.txt  main.cpp
lab1/cpp/: CMakeLists.txt  main.cpp
lab1/cpp-cw/: main.cpp
lab1/octave/: points.m
lab1/py/: main.py
lab1/py-cw/: main.ipynb
lab2/cpp-cw/: CMakeLists.txt  main.cpp
lab2/homography_hw/: homography.yaml  main.py  video.py
lab2/leasqr/: gs_demo.m  gs_errfunc.m  optim_func.m
lab2/lecture-cw/: main.m  octave-workspace
lab2/manual-homography/: main.m  refined_solution.ipynb  solution.ipynb
lab2/ransac/: main.ipynb
lab2/svd-py/: main.ipynb
lab3/cpp-cw/: CMakeLists.txt  HomographyData.cpp  HomographyData.h  main.cpp  playback.cpp  robot-homography.yml
lab3/cw-py/: main.py  video.py
lab4-p2/lab4-segmentation-training/: onnx_export.py  train.py
lab4/py-cw/: homography.yaml  segment.py  segment_new.py  segment_without_custom_model.py
lab4/py-train-floor/: fine_tune.py  onnx_export.py  transforms.py  utils.py
lab4/py-train-floor/FloorData/ImageSets/: train.txt  val.txt
midterm-2020/: main.py
midterm-2021/: main.ipynb  main.py
midterm-practice/: calibration.yaml  decomposing-p.ipynb  main.ipynb
reconstruct-e-f/: main.ipynb
